# opencv_custom

./: .gitattributes  .gitignore  DISTRIBUTION.md  MANIFEST.in  README.md  pyproject.toml  setup-lfs-and-push.md
.github/workflows/: build-wheels.yml  test-wheels.yml
cv2/: __init__.py  libopencv_aruco.so.4.13.0  libopencv_bgsegm.so.4.13.0  libopencv_bioinspired.so.413  libopencv_calib3d.so.413  libopencv_core.so.4.13.0  libopencv_cudabgsegm.so.4.13.0  libopencv_cudacodec.so.4.13.0  libopencv_cudafilters.so.413  libopencv_cudaimgproc.so.4.13.0  libopencv_cudalegacy.so.413  libopencv_cudaoptflow.so.4.13.0  libopencv_cudawarping.so.413  libopencv_cudev.so.413  libopencv_dnn_objdetect.so.413  libopencv_dpm.so.413  libopencv_face.so.413  libopencv_freetype.so.4.13.0  libopencv_fuzzy.so.413  libopencv_gapi.so.4.13.0  libopencv_hdf.so.4.13.0  libopencv_img_hash.so.4.13.0  libopencv_imgcodecs.so.4.13.0  libopencv_imgproc.so.4.13.0  libopencv_line_descriptor.so.413  libopencv_mcc.so.413  libopencv_ml.so.413  libopencv_optflow.so.4.13.0  libopencv_plot.so.4.13.0  libopencv_quality.so.413  libopencv_rapid.so.413  libopencv_reg.so.4.13.0  libopencv_saliency.so.4.13.0  libopencv_shape.so.413  libopencv_signal.so.4.13.0  libopencv_stereo.so.413  libopencv_stitching.so.413  libopencv_superres.so.4.13.0  libopencv_surface_matching.so.4.13.0  libopencv_text.so.413  (+7 more)
cv2/download/: opencv_custom-4.13.0-py3-none-any.whl
scripts/: package_wheels.py
