[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencv-custom"
version = "4.13.0"
description = "Custom OpenCV build with CUDA and contrib modules"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "build>=1.3.0",
    "depthai>=2.30.0.0",
    "numpy>=1.21.0,<2.0.0",
]
authors = [
    {name = "Custom Build"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[tool.setuptools]
packages = ["cv2"]
include-package-data = true

[tool.setuptools.package-data]
cv2 = ["*.so", "*.so.*"]

[tool.setuptools.package-dir]
cv2 = "cv2"
